# crig-n-croll

./: .gitignore  build.zig  build.zig.zon
epd/: wac.epd
src/: android.zig  board.zig  build_movegen.zig  buildtime_consts.zig  eval.zig  magic.zig  magic_gen.zig  main.zig  movegen.zig  opening.zig  opening_builder.zig  perft.zig  perftree.zig  pgn.zig  search.zig  strength_testing.zig  timer.zig  tt.zig  uci.zig  util.zig
src_c/: board.c  board.h  eval.c  eval.h  fen.c  hashing.c  hashing.h  magic.c  magic.h  magic_gen.c  main.c  meson.build  movegen.c  movegen.h  perft.c  perftree.c  search.c  search.h  test_eval.c  test_fen.c  test_hashing.c  test_magic.c  test_search.c  util.c  util.h
